--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- the 'root' element where the React app will be rendered -->
     <div id="root"></div>
 
-    <!--to import JSX file-->
+    <!--to import JSX file where React code is bootstrapped-->
     <script type="module" src="index.jsx"></script>
 
 </body>
